Feature definitions (`PQXX_HAVE_OPTIONAL` etc.) now detected both at build and import time; major changes:
* `cmake/` directory renamed to `CMakeModules/`
* `CMakeModules/` is installed with other CMake config files
* `pqxx/config.hxx` has been replaced by compile definitions attached to CMake targets (allows them to be decided at import be overloaded by users)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -74,6 +74,12 @@ SET(PQXX_TEST_RUNNER_SOURCES
 
 ADD_EXECUTABLE(runner ${PQXX_TEST_RUNNER_SOURCES})
 TARGET_LINK_LIBRARIES(runner PRIVATE pqxx-shared)
+TARGET_COMPILE_DEFINITIONS(
+    runner
+    PRIVATE
+        ${PQXX_PRIVATE_COMPILE_DEFINITIONS}
+        ${PQXX_PUBLIC_COMPILE_DEFINITIONS}
+)
 ADD_TEST(
     NAME runner
     WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
