--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ INCLUDE(PQXXSystemConfig)
 
 
 # Target configuration
-SET(PQXX_ABI_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}")
+# SET(PQXX_ABI_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}")
 CONFIGURE_FILE(
     "${PROJECT_SOURCE_DIR}/config/version.hxx.in"
     "${PROJECT_BINARY_DIR}/include/pqxx/version.hxx"
@@ -116,6 +116,13 @@ INSTALL(
     EXPORT libpqxx-targets
     NAMESPACE "libpqxx::"
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/libpqxx"
+)
+
+SET(PQXX_PKGCONFIG_FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc")
+CONFIGURE_FILE("config/pkg-config.pc.in" "${PQXX_PKGCONFIG_FILE}" @ONLY)
+INSTALL(
+    FILES "${PQXX_PKGCONFIG_FILE}"
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/"
 )
 
 EXPORT(EXPORT libpqxx-targets
