--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,1 +1,5 @@
-INSTALL(DIRECTORY "pqxx" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+INSTALL(
+    DIRECTORY "pqxx"
+    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    COMPONENT headers
+)
