--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,12 +63,15 @@ MACRO(PQXX_ADD_LIBRARY NAME TYPE)
         PUBLIC ${PQXX_PUBLIC_COMPILE_DEFINITIONS}
     )
 
+    STRING(TOLOWER "${TYPE}" TYPE_LOWER)
+
     INSTALL(
         TARGETS "${NAME}"
         EXPORT libpqxx-targets
         RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
         LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
         ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        COMPONENT ${TYPE_LOWER}_libraries
     )
 ENDMACRO()
 
