--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -37,3 +37,11 @@ ADD_TEST(
     WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
     COMMAND unit_runner
 )
+# INSTALL(
+#     TARGETS unit_runner
+#     EXPORT libpqxx-targets
+#     RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+#     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+#     ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+#     COMPONENT tests EXCLUDE_FROM_ALL
+# )
