--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -85,5 +85,13 @@ ADD_TEST(
     WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
     COMMAND runner
 )
+# INSTALL(
+#     TARGETS runner
+#     EXPORT libpqxx-targets
+#     RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+#     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+#     ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+#     COMPONENT tests EXCLUDE_FROM_ALL
+# )
 
 ADD_SUBDIRECTORY("unit/")
