--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
 
 
 PROJECT(libpqxx VERSION 7.0.0 LANGUAGES CXX)
+SET(PROJECT_ABI_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}")
 
 
 SET(CMAKE_CXX_STANDARD 17)
@@ -76,7 +77,7 @@ ENDIF()
 
 
 # Subdirectories
-# ADD_SUBDIRECTORY("include/")
+ADD_SUBDIRECTORY("include/")
 # ADD_SUBDIRECTORY("src/")
 # IF(BUILD_TESTING)
 #     ADD_SUBDIRECTORY("test/")
