Add library build configuration from 6.4.4 branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ ENDIF()
 
 # Subdirectories
 ADD_SUBDIRECTORY("include/")
-# ADD_SUBDIRECTORY("src/")
+ADD_SUBDIRECTORY("src/")
 # IF(BUILD_TESTING)
 #     ADD_SUBDIRECTORY("test/")
 # ENDIF()
