Use actual ABI version as SOVERSION

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,7 +37,7 @@ MACRO(PQXX_ADD_LIBRARY NAME TYPE)
     SET_TARGET_PROPERTIES("${NAME}" PROPERTIES
         OUTPUT_NAME "pqxx"
         VERSION "${PROJECT_VERSION}"
-        SOVERSION "${PROJECT_VERSION}"
+        SOVERSION "${PROJECT_ABI_VERSION}"
     )
 
     TARGET_SOURCES("${NAME}" PRIVATE ${PQXX_SOURCES})
