Add tests build configuration from 6.4.4 branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,9 +79,9 @@ ENDIF()
 # Subdirectories
 ADD_SUBDIRECTORY("include/")
 ADD_SUBDIRECTORY("src/")
-# IF(BUILD_TESTING)
-#     ADD_SUBDIRECTORY("test/")
-# ENDIF()
+IF(BUILD_TESTING)
+    ADD_SUBDIRECTORY("test/")
+ENDIF()
 
 
 # Package configuration
