Correct usage of object library `_pqxx`

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,9 +60,8 @@ MACRO(PQXX_ADD_LIBRARY NAME TYPE)
         SOVERSION "${PROJECT_ABI_VERSION}"
     )
 
+    TARGET_SOURCES("${NAME}" PRIVATE $<TARGET_OBJECTS:_pqxx>)
     TARGET_INCLUDE_DIRECTORIES("${NAME}" ${PQXX_INCLUDE_INTERFACES})
-    TARGET_LINK_LIBRARIES("${NAME}" PRIVATE _pqxx)
-    TARGET_COMPILE_OPTIONS("${NAME}" PRIVATE ${PQXX_COMPILE_OPTIONS})
     TARGET_COMPILE_DEFINITIONS(
         "${NAME}"
         PUBLIC ${PQXX_PUBLIC_COMPILE_DEFINITIONS}
