Add CPack configs from 7.0.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,3 +133,8 @@ INSTALL(
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/"
     COMPONENT pkg-config
 )
+
+# Package generation
+SET(CPACK_GENERATOR TGZ)
+SET(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
+INCLUDE(CPack)
